--- a/catalogo/templates/catalogo/autores/deletar_autor.html
+++ b/catalogo/templates/catalogo/autores/deletar_autor.html
@@ -1,20 +1,9 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+{% extends 'reusable/base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deletar Autor</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
+{% block title %}Biblioteca Trevizoli - Deletar Autor{% endblock %}
 
-<body>
-
-{% include 'reusable/header.html' %}
-
-<main class="d-flex align-items-center justify-content-center">
+{% block content %}
+  <main class="d-flex align-items-center justify-content-center">
     <div class="container mt-5">
         <div class="card">
             <div class="card-header text-center">
@@ -34,11 +23,4 @@
         </div>
     </div>
 </main>
-
-{% include 'reusable/footer.html' %}
-
-{% include 'reusable/notificacoes.html' %}
-
-</body>
-
-</html>
+{% endblock %}
