--- a/catalogo/templates/catalogo/autores/detalhes_autor.html
+++ b/catalogo/templates/catalogo/autores/detalhes_autor.html
@@ -1,27 +1,11 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+{% extends 'reusable/base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ autor.nome }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
+{% block title %}Biblioteca Trevizoli - Detalhes Autor{% endblock %}
 
-<body>
-
-{% include 'reusable/header.html' %}
-
-<main class="container mt-5">
-    <h2>{{ autor.nome }}</h2>
-    <p><strong>Biografia:</strong> {{ autor.biografia }}</p>
-    <a href="{% url 'listar_autores' %}" class="btn btn-success">Voltar</a>
-</main>
-
-{% include 'reusable/footer.html' %}
-
-</body>
-
-</html>
+{% block content %}
+    <main class="container mt-5">
+        <h2>{{ autor.nome }}</h2>
+        <p><strong>Biografia:</strong> {{ autor.biografia }}</p>
+        <a href="{% url 'listar_autores' %}" class="btn btn-success">Voltar</a>
+    </main>
+{% endblock %}
