--- a/catalogo/templates/catalogo/editoras/detalhes_editora.html
+++ b/catalogo/templates/catalogo/editoras/detalhes_editora.html
@@ -1,27 +1,15 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalhes da Editora</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
-<body>
+{% extends 'reusable/base.html' %}
 
-{% include 'reusable/header.html' %}
+{% block title %}Biblioteca Trevizoli - Detalhes Editora{% endblock %}
 
-<main class="container mt-5">
-    <h2>Detalhes da Editora</h2>
-    <ul class="list-group">
-        <li class="list-group-item"><strong>ID:</strong> {{ editora.id }}</li>
-        <li class="list-group-item"><strong>Nome:</strong> {{ editora.nome }}</li>
-        <li class="list-group-item"><strong>Endereço:</strong> {{ editora.endereco }}</li>
-    </ul>
-    <a href="{% url 'listar_editoras_crud' %}" class="btn btn-secondary mt-3">Voltar</a>
-</main>
-
-{% include 'reusable/footer.html' %}
-</body>
-</html>
+{% block content %}
+    <main class="container mt-5">
+        <h2>Detalhes da Editora</h2>
+        <ul class="list-group">
+            <li class="list-group-item"><strong>ID:</strong> {{ editora.id }}</li>
+            <li class="list-group-item"><strong>Nome:</strong> {{ editora.nome }}</li>
+            <li class="list-group-item"><strong>Endereço:</strong> {{ editora.endereco }}</li>
+        </ul>
+        <a href="{% url 'listar_editoras_crud' %}" class="btn btn-secondary mt-3">Voltar</a>
+    </main>
+{% endblock %}
