--- a/catalogo/templates/catalogo/generos/detalhes_genero.html
+++ b/catalogo/templates/catalogo/generos/detalhes_genero.html
@@ -1,26 +1,14 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalhes do Gênero</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
-<body>
+{% extends 'reusable/base.html' %}
 
-{% include 'reusable/header.html' %}
+{% block title %}Biblioteca Trevizoli - Detalhes Generos{% endblock %}
 
-<main class="container mt-5">
-    <h2>Detalhes do Gênero</h2>
-    <ul class="list-group">
-        <li class="list-group-item"><strong>ID:</strong> {{ genero.id }}</li>
-        <li class="list-group-item"><strong>Nome:</strong> {{ genero.nome }}</li>
-    </ul>
-    <a href="{% url 'listar_generos_crud' %}" class="btn btn-secondary mt-3">Voltar</a>
-</main>
-
-{% include 'reusable/footer.html' %}
-</body>
-</html>
+{% block content %}
+    <main class="container mt-5">
+        <h2>Detalhes do Gênero</h2>
+        <ul class="list-group">
+            <li class="list-group-item"><strong>ID:</strong> {{ genero.id }}</li>
+            <li class="list-group-item"><strong>Nome:</strong> {{ genero.nome }}</li>
+        </ul>
+        <a href="{% url 'listar_generos_crud' %}" class="btn btn-secondary mt-3">Voltar</a>
+    </main>
+{% endblock %}
