--- a/catalogo/templates/catalogo/livros/criar_livro.html
+++ b/catalogo/templates/catalogo/livros/criar_livro.html
@@ -1,93 +1,78 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+{% extends 'reusable/base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Criar Livro</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
+{% block title %}Biblioteca Trevizoli - Criar Livro{% endblock %}
 
-<body>
+{% block content %}
+    <main class="container mt-5">
+        <h2>Criar Livro</h2>
+        <form method="POST">
+            {% csrf_token %}
 
-{% include 'reusable/header.html' %}
+            <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="floatingTitle" placeholder="Título do Livro" name="titulo"
+                       value="{{ form.titulo.value|default:'' }}">
+                <label for="floatingTitle">Título do Livro</label>
+            </div>
 
-<main class="container mt-5">
-    <h2>Criar Livro</h2>
-    <form method="POST">
-        {% csrf_token %}
-
-        <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="floatingTitle" placeholder="Título do Livro" name="titulo"
-                   value="{{ form.titulo.value|default:'' }}">
-            <label for="floatingTitle">Título do Livro</label>
-        </div>
-
-        <div class="form-floating mb-3">
+            <div class="form-floating mb-3">
             <textarea class="form-control" placeholder="Descrição do Livro" id="floatingDescription"
                       style="height: 150px; resize: none;"
                       name="descricao">{{ form.descricao.value|default:'' }}</textarea>
-            <label for="floatingDescription">Descrição</label>
-        </div>
+                <label for="floatingDescription">Descrição</label>
+            </div>
 
-        <div class="form-floating mb-3">
-            <input type="number" class="form-control" id="floatingYear" placeholder="Ano de Publicação"
-                   name="ano_publicacao" value="{{ form.ano_publicacao.value|default:'' }}">
-            <label for="floatingYear">Ano de Publicação</label>
-        </div>
+            <div class="form-floating mb-3">
+                <input type="number" class="form-control" id="floatingYear" placeholder="Ano de Publicação"
+                       name="ano_publicacao" value="{{ form.ano_publicacao.value|default:'' }}">
+                <label for="floatingYear">Ano de Publicação</label>
+            </div>
 
-        <div class="form-floating mb-3">
-            <select class="form-select" id="floatingAuthor" name="autor">
-                <option value="">Selecione o Autor</option>
-                {% for autor in form.autor.field.queryset %}
-                    <option value="{{ autor.id }}"
-                            {% if autor.id|stringformat:"s" == form.autor.value|stringformat:"s" %}selected{% endif %}>{{ autor.nome }}</option>
-                {% endfor %}
-            </select>
-            <label for="floatingAuthor">Autor</label>
-        </div>
+            <div class="form-floating mb-3">
+                <select class="form-select" id="floatingAuthor" name="autor">
+                    <option value="">Selecione o Autor</option>
+                    {% for autor in form.autor.field.queryset %}
+                        <option value="{{ autor.id }}"
+                                {% if autor.id|stringformat:"s" == form.autor.value|stringformat:"s" %}selected{% endif %}>{{ autor.nome }}</option>
+                    {% endfor %}
+                </select>
+                <label for="floatingAuthor">Autor</label>
+            </div>
 
-        <div class="form-floating mb-3">
-            <select class="form-select" id="floatingEditora" name="editora">
-                <option value="">Selecione a Editora</option>
-                {% for editora in form.editora.field.queryset %}
-                    <option value="{{ editora.id }}"
-                            {% if editora.id|stringformat:"s" == form.editora.value|stringformat:"s" %}selected{% endif %}>{{ editora.nome }}</option>
-                {% endfor %}
-            </select>
-            <label for="floatingEditora">Editora</label>
-        </div>
+            <div class="form-floating mb-3">
+                <select class="form-select" id="floatingEditora" name="editora">
+                    <option value="">Selecione a Editora</option>
+                    {% for editora in form.editora.field.queryset %}
+                        <option value="{{ editora.id }}"
+                                {% if editora.id|stringformat:"s" == form.editora.value|stringformat:"s" %}selected{% endif %}>{{ editora.nome }}</option>
+                    {% endfor %}
+                </select>
+                <label for="floatingEditora">Editora</label>
+            </div>
 
-        <div class="form-floating mb-3">
-            <select class="form-select" id="floatingGenero" name="genero">
-                <option value="">Selecione o Gênero</option>
-                {% for genero in form.genero.field.queryset %}
-                    <option value="{{ genero.id }}"
-                            {% if genero.id|stringformat:"s" == form.genero.value|stringformat:"s" %}selected{% endif %}>{{ genero.nome }}</option>
-                {% endfor %}
-            </select>
-            <label for="floatingGenero">Gênero</label>
-        </div>
+            <div class="form-floating mb-3">
+                <select class="form-select" id="floatingGenero" name="genero">
+                    <option value="">Selecione o Gênero</option>
+                    {% for genero in form.genero.field.queryset %}
+                        <option value="{{ genero.id }}"
+                                {% if genero.id|stringformat:"s" == form.genero.value|stringformat:"s" %}selected{% endif %}>{{ genero.nome }}</option>
+                    {% endfor %}
+                </select>
+                <label for="floatingGenero">Gênero</label>
+            </div>
 
-        <div class="form-floating mb-3">
-            <select class="form-select" id="floatingTag" name="tags">
-                <option value="">Selecione a Tag</option>
-                {% for tag in form.tags.field.queryset %}
-                    <option value="{{ tag.id }}"
-                            {% if tag.id|stringformat:"s" == form.tags.value|stringformat:"s" %}selected{% endif %}>{{ tag.nome }}</option>
-                {% endfor %}
-            </select>
-            <label for="floatingTag">Tag</label>
-        </div>
+            <div class="form-floating mb-3">
+                <select class="form-select" id="floatingTag" name="tags">
+                    <option value="">Selecione a Tag</option>
+                    {% for tag in form.tags.field.queryset %}
+                        <option value="{{ tag.id }}"
+                                {% if tag.id|stringformat:"s" == form.tags.value|stringformat:"s" %}selected{% endif %}>{{ tag.nome }}</option>
+                    {% endfor %}
+                </select>
+                <label for="floatingTag">Tag</label>
+            </div>
 
-        <button type="submit" class="btn btn-success mt-3">Salvar</button>
-        <a href="{% url 'listar_livros_crud' %}" class="btn btn-secondary mt-3">Voltar</a>
-    </form>
-</main>
-
-{% include 'reusable/footer.html' %}
-</body>
-
-</html>
+            <button type="submit" class="btn btn-success mt-3">Salvar</button>
+            <a href="{% url 'listar_livros_crud' %}" class="btn btn-secondary mt-3">Voltar</a>
+        </form>
+    </main>
+{% endblock %}
