--- a/catalogo/templates/catalogo/livros/detalhes_livro.html
+++ b/catalogo/templates/catalogo/livros/detalhes_livro.html
@@ -1,46 +1,29 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+{% extends 'reusable/base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ livro.titulo }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
+{% block title %}Biblioteca Trevizoli - Detalhes Livro{% endblock %}
 
-<body>
+{% block content %}
+    <main>
+        <div class="container mt-5">
+            <h2>{{ livro.titulo }}</h2>
+            <p><strong>Autor:</strong> {{ livro.autor.nome }}</p>
+            <p class="card-text"><strong>Editora:</strong> {{ livro.editora.nome }}</p>
+            <p class="card-text"><strong>Gênero:</strong> {{ livro.genero.nome }}</p>
+            <p><strong>Descrição:</strong> {{ livro.descricao }}</p>
+            <p><strong>Ano de Publicação:</strong> {{ livro.ano_publicacao }}</p>
 
-{% include 'reusable/header.html' %}
+            <!-- Adicionando as tags -->
+            <p><strong>Tags:</strong>
+                {% if livro.tags.all %}
+                    {% for tag in livro.tags.all %}
+                        {{ tag.nome }}{% if not forloop.last %}, {% endif %}
+                    {% endfor %}
+                {% else %}
+                    Nenhuma tag disponível.
+                {% endif %}
+            </p>
 
-<main>
-    <div class="container mt-5">
-        <h2>{{ livro.titulo }}</h2>
-        <p><strong>Autor:</strong> {{ livro.autor.nome }}</p>
-        <p class="card-text"><strong>Editora:</strong> {{ livro.editora.nome }}</p>
-        <p class="card-text"><strong>Gênero:</strong> {{ livro.genero.nome }}</p>
-        <p><strong>Descrição:</strong> {{ livro.descricao }}</p>
-        <p><strong>Ano de Publicação:</strong> {{ livro.ano_publicacao }}</p>
-
-        <!-- Adicionando as tags -->
-        <p><strong>Tags:</strong>
-            {% if livro.tags.all %}
-                {% for tag in livro.tags.all %}
-                    {{ tag.nome }}{% if not forloop.last %}, {% endif %}
-                {% endfor %}
-            {% else %}
-                Nenhuma tag disponível.
-            {% endif %}
-        </p>
-
-        <a href="{% url 'listar_livros' %}" class="btn btn-success">Voltar</a>
-    </div>
-</main>
-
-
-{% include 'reusable/footer.html' %}
-
-</body>
-
-</html>
+            <a href="{% url 'listar_livros' %}" class="btn btn-success">Voltar</a>
+        </div>
+    </main>
+{% endblock %}
