--- a/catalogo/templates/catalogo/tags/criar_tag.html
+++ b/catalogo/templates/catalogo/tags/criar_tag.html
@@ -1,34 +1,19 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+{% extends 'reusable/base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Criar Tag</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
+{% block title %}Biblioteca Trevizoli - Criar Tag{% endblock %}
 
-<body>
-
-{% include 'reusable/header.html' %}
-
-<main class="container mt-5">
-    <h2>Criar Tag</h2>
-    <form method="POST">
-        {% csrf_token %}
-        <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="floatingTagName" placeholder="Nome da Tag" name="nome"
-                   value="{{ form.nome.value|default:'' }}">
-            <label for="floatingTagName">Nome da Tag</label>
-        </div>
-        <button type="submit" class="btn btn-success mt-3">Salvar</button>
-        <a href="{% url 'listar_tags_crud' %}" class="btn btn-secondary mt-3">Voltar</a>
-    </form>
-</main>
-
-{% include 'reusable/footer.html' %}
-</body>
-
-</html>
+{% block content %}
+    <main class="container mt-5">
+        <h2>Criar Tag</h2>
+        <form method="POST">
+            {% csrf_token %}
+            <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="floatingTagName" placeholder="Nome da Tag" name="nome"
+                       value="{{ form.nome.value|default:'' }}">
+                <label for="floatingTagName">Nome da Tag</label>
+            </div>
+            <button type="submit" class="btn btn-success mt-3">Salvar</button>
+            <a href="{% url 'listar_tags_crud' %}" class="btn btn-secondary mt-3">Voltar</a>
+        </form>
+    </main>
+{% endblock %}
