--- a/catalogo/templates/catalogo/tags/deletar_tag.html
+++ b/catalogo/templates/catalogo/tags/deletar_tag.html
@@ -1,44 +1,26 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+{% extends 'reusable/base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deletar Tag</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
+{% block title %}Biblioteca Trevizoli - Deletar Tag{% endblock %}
 
-<body>
-
-{% include 'reusable/header.html' %}
-
-<main class="d-flex align-items-center justify-content-center">
-    <div class="container mt-5">
-        <div class="card">
-            <div class="card-header text-center">
-                <h5>Confirmação de Deleção</h5>
-            </div>
-            <div class="card-body">
-                <h6 class="text-danger">Tem certeza que deseja deletar a tag "{{ tag.nome }}"?</h6>
-                <p>Esta ação não pode ser desfeita.</p>
-                <form method="POST">
-                    {% csrf_token %}
-                    <div class="d-flex justify-content-between">
-                        <button type="submit" class="btn btn-danger">Deletar</button>
-                        <a href="{% url 'listar_tags_crud' %}" class="btn btn-secondary">Cancelar</a>
-                    </div>
-                </form>
+{% block content %}
+    <main class="d-flex align-items-center justify-content-center">
+        <div class="container mt-5">
+            <div class="card">
+                <div class="card-header text-center">
+                    <h5>Confirmação de Deleção</h5>
+                </div>
+                <div class="card-body">
+                    <h6 class="text-danger">Tem certeza que deseja deletar a tag "{{ tag.nome }}"?</h6>
+                    <p>Esta ação não pode ser desfeita.</p>
+                    <form method="POST">
+                        {% csrf_token %}
+                        <div class="d-flex justify-content-between">
+                            <button type="submit" class="btn btn-danger">Deletar</button>
+                            <a href="{% url 'listar_tags_crud' %}" class="btn btn-secondary">Cancelar</a>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
-</main>
-
-{% include 'reusable/notificacoes.html' %}
-
-{% include 'reusable/footer.html' %}
-
-</body>
-
-</html>
+    </main>
+{% endblock %}
