--- a/catalogo/templates/catalogo/tags/detalhes_tag.html
+++ b/catalogo/templates/catalogo/tags/detalhes_tag.html
@@ -1,29 +1,14 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+{% extends 'reusable/base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ tag.nome }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
+{% block title %}Biblioteca Trevizoli - Detalhes Tag{% endblock %}
 
-<body>
+{% block content %}
+    <main>
+        <div class="container mt-5">
+            <h2>{{ tag.nome }}</h2>
+            <p><strong>ID:</strong> {{ tag.id }}</p>
 
-{% include 'reusable/header.html' %}
-
-<main>
-    <div class="container mt-5">
-        <h2>{{ tag.nome }}</h2>
-        <p><strong>ID:</strong> {{ tag.id }}</p>
-
-        <a href="{% url 'listar_tags_crud' %}" class="btn btn-success">Voltar</a>
-    </div>
-</main>
-
-{% include 'reusable/footer.html' %}
-</body>
-
-</html>
+            <a href="{% url 'listar_tags_crud' %}" class="btn btn-success">Voltar</a>
+        </div>
+    </main>
+{% endblock %}
