--- a/contas/templates/contas/login.html
+++ b/contas/templates/contas/login.html
@@ -1,18 +1,6 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/login.css' %}">
-</head>
-<body class="fundo">
+{% extends 'reusable/base.html' %}
 
-{% include 'reusable/header.html' %}
+{% block title %}Biblioteca Trevizoli - Login{% endblock %}
 
 {% block content %}
     <div class="container-principal">
@@ -31,29 +19,25 @@
                 <form class="formulario" action="" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     <label class="rotulo-input" for="">
-                        <i class="far fa-envelope icone-modificado"><img src="pags/img/log.png" width="25px" alt=""></i>
-                        <input type="text" name="username" id="username" class="form-control" required>
+                        <i class="bi bi-person-circle icone-modificado"></i>
+                        <input type="text" name="username" id="username" class="form-control" placeholder="Username"
+                               required>
                     </label>
 
                     <label class="rotulo-input" for="">
-                        <i class="fas fa-lock icone-modificado"><img src="pags/img/senha.png" width="25px" alt=""></i>
-                        <input type="password" name="password" id="password" class="form-control" required><br>
+                        <i class="fas fa-lock icone-modificado"></i>
+                        <input type="password" name="password" id="password" class="form-control" placeholder="Senha"
+                               required><br>
                     </label>
 
                     <button type="submit" class="btn-login">Login</button>
 
 
                     <a href="{% url 'register' %}" class="btn-login-cadastro">
-                        <p>Cadastre-se</p>
+                        <p>Ainda não tema uma conta? Cadastre-se</p>
                     </a>
                 </form>
             </div>
         </div>
     </div>
 {% endblock %}
-
-{% include 'reusable/notificacoes.html' %}
-
-{% include 'reusable/footer.html' %}
-</body>
-</html>
