--- a/catalogo/templates/catalogo/editoras/deletar_editora.html
+++ b/catalogo/templates/catalogo/editoras/deletar_editora.html
@@ -3,13 +3,26 @@
 {% block title %}Biblioteca Trevizoli - Deletar Editora{% endblock %}
 
 {% block content %}
-    <main class="container mt-5">
-        <h2>Deletar Editora</h2>
-        <p>Tem certeza que deseja deletar a editora <strong>{{ editora.nome }}</strong>?</p>
-        <form method="POST">
-            {% csrf_token %}
-            <button type="submit" class="btn btn-danger">Deletar</button>
-            <a href="{% url 'listar_editoras_crud' %}" class="btn btn-secondary">Cancelar</a>
-        </form>
+    <main class="d-flex align-items-center justify-content-center">
+        <div class="container mt-5">
+            <div class="card">
+                <div class="card-header text-center">
+                    <h5>Confirmação de Deleção</h5>
+                </div>
+                <div class="card-body">
+                    <h6 class="text-danger">Tem certeza que deseja deletar a editora "{{ editora.nome }}"?</h6>
+                    <p>Esta ação não pode ser desfeita.</p>
+                    <form method="POST">
+                        {% csrf_token %}
+                        <div class="d-flex justify-content-between">
+                            <button type="submit" class="btn btn-danger">Deletar</button>
+                            <a href="{% url 'listar_livros_crud' %}" class="btn btn-secondary">Cancelar</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </main>
 {% endblock %}
+
+
