Corrigi alguns bugs no front

--- a/contas/templates/contas/register.html
+++ b/contas/templates/contas/register.html
@@ -1,4 +1,4 @@
-{% extends 'reusable/base.html' %}
+{% extends 'reusable_contas/base.html' %}
 
 {% block title %}Biblioteca Trevizoli - Registrar{% endblock %}
 
