--- a/catalogo/templates/reusable/footer.html
+++ b/catalogo/templates/reusable/footer.html
@@ -1,3 +1,3 @@
 <footer class="bg-dark text-white text-center py-3 mt-auto">
-    <p>Created by: Rafael Trevizoli</p>
+    <p>Created by : <a href="https://github.com/RafaelTrevizoli" target="_blank" class="text-white">Rafael Trevizoli</a></p>
 </footer>
