--- a/catalogo/templates/catalogo/tags/listar_tags_crud.html
+++ b/catalogo/templates/catalogo/tags/listar_tags_crud.html
@@ -5,6 +5,24 @@
 {% block content %}
     <div class="container mt-5">
         <h2 class="mb-4">Gerenciar Tags</h2>
+
+        <!-- Barra de Pesquisa -->
+        <form method="GET" action="{% url 'listar_tags_crud' %}" class="mb-4">
+            <div class="input-group">
+                <input type="text" name="buscar" class="form-control"
+                       placeholder="Pesquise por título, autor, editora, gênero ou tag"
+                       value="{{ request.GET.buscar }}">
+
+                {% if request.GET.buscar %}
+                    <a href="{% url 'listar_tags_crud' %}" class="btn btn-secondary">Voltar</a>
+                {% endif %}
+
+                <button class="btn btn-primary" type="submit">
+                    <i class="bi bi-search"></i> Pesquisar
+                </button>
+            </div>
+        </form>
+    
         <a href="{% url 'criar_tag' %}" class="btn btn-primary mb-3">
             <i class="bi bi-plus-circle"></i> Adicionar Tag
         </a>
@@ -40,8 +58,8 @@
             {% endfor %}
             </tbody>
         </table>
-    
-    {% include 'reusable/paginator.html' %}
-    
+
+        {% include 'reusable/paginator.html' %}
+
     </div>
 {% endblock %}
