--- a/catalogo/templates/reusable/header.html
+++ b/catalogo/templates/reusable/header.html
@@ -47,13 +47,9 @@
                             <i class="fas fa-cogs"></i> Gestão - USUÁRIOS
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="{% url 'listar_emprestimos' %}"><i
-                                    class="bi bi-people-fill"></i>
-                                Empréstimos View</a></li>
-                            
                             <li><a class="dropdown-item" href="{% url 'logs' %}"><i
                                     class="bi bi-people-fill"></i>
-                                Empréstimos Log</a></li>
+                                Empréstimos Usuários</a></li>
                         </ul>
                     </li>
                 {% endif %}
