--- a/catalogo/templates/catalogo/autores/listar_autores_crud.html
+++ b/catalogo/templates/catalogo/autores/listar_autores_crud.html
@@ -5,6 +5,23 @@
 {% block content %}
     <div class="container mt-5">
         <h2 class="mb-4">Gerenciar Autores</h2>
+
+        <form method="GET" action="{% url 'listar_autores_crud' %}" class="mb-4">
+            <div class="input-group">
+                <input type="text" name="buscar" class="form-control"
+                       placeholder="Pesquise por nome ou biografia do autor"
+                       value="{{ request.GET.buscar }}">
+
+                {% if request.GET.buscar %}
+                    <a href="{% url 'listar_autores_crud' %}" class="btn btn-secondary">Voltar</a>
+                {% endif %}
+
+                <button class="btn btn-primary" type="submit">
+                    <i class="bi bi-search"></i> Pesquisar
+                </button>
+            </div>
+        </form>
+
         <a href="{% url 'criar_autor' %}" class="btn btn-primary mb-3">
             <i class="bi bi-plus-circle"></i> Adicionar Autor
         </a>
