--- a/catalogo/templates/catalogo/editoras/listar_editoras_crud.html
+++ b/catalogo/templates/catalogo/editoras/listar_editoras_crud.html
@@ -5,6 +5,23 @@
 {% block content %}
     <div class="container mt-5">
         <h2 class="mb-4">Gerenciar Editoras</h2>
+
+        <form method="GET" action="{% url 'listar_editoras_crud' %}" class="mb-4">
+            <div class="input-group">
+                <input type="text" name="buscar" class="form-control"
+                       placeholder="Pesquise por nome ou biografia do autor"
+                       value="{{ request.GET.buscar }}">
+
+                {% if request.GET.buscar %}
+                    <a href="{% url 'listar_editoras_crud' %}" class="btn btn-secondary">Voltar</a>
+                {% endif %}
+
+                <button class="btn btn-primary" type="submit">
+                    <i class="bi bi-search"></i> Pesquisar
+                </button>
+            </div>
+        </form>
+    
         <a href="{% url 'criar_editora' %}" class="btn btn-primary mb-3">
             <i class="bi bi-plus-circle"></i> Adicionar Editora
         </a>
@@ -42,7 +59,7 @@
             {% endfor %}
             </tbody>
         </table>
-    
-    {% include 'reusable/paginator.html' %}
+
+        {% include 'reusable/paginator.html' %}
     </div>
 {% endblock %}
